﻿Legend:
! Breaking change
* Compatible change
- Bugfix
+ New feature
===============================================================================

~~~~~~~~~
+ v7.0.0:
~~~~~~~~~

+ KGySoft.Drawing.Uwp namespace
===============================
+ New WriteableBitmapExtensions class:
  + New GetReadableBitmapData method: to get an IReadableBitmapData data for an UWP WriteableBitmap.
  + New GetWritableBitmapData method: to get an IWritableBitmapData data for an UWP WriteableBitmap.
  + New GetReadWriteBitmapData method: to get an IReadWriteBitmapData data for an UWP WriteableBitmap.
+ New ReadableBitmapDataExtensions class:
  + New ToWriteableBitmap/ToWriteableBitmapAsync methods